--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "npm run build && npm run typeorm -- migration:generate src/common/migrations/migration -d src/ormconfig.ts",
+    "migration:run": "npm run typeorm -- migration:run -d src/ormconfig.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
     "class-validator": "^0.14.1",
+    "pg": "^8.13.0",
     "postgresql": "^0.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
