--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   cooperfilme_backend:
     build:
@@ -13,6 +11,7 @@ services:
     environment:
       - NODE_ENV=development
       - DATABASE_HOST=cooperfilme_db
+      - DATABASE_PORT=5432
     depends_on:
       - cooperfilme_db
     networks:
@@ -26,7 +25,7 @@ services:
     environment:
       POSTGRES_USER: cooperfilme
       POSTGRES_PASSWORD: cooperfilme
-      POSTGRES_DB: cooperfilme_db
+      POSTGRES_DB: cooperfilme_svc_db
     volumes:
       - cooperfilme_data:/var/lib/postgresql/data
     networks:
